# Computer-Graphics-2019

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
common/: common.h  geometry.hpp  kdtree.hpp  simple_intersect_algs.hpp
gpu/: bezier.hpp  cuda_helpers.h  math_helpers.h  object.hpp  render.cu  render_helpers.h  test_gpu.cu
src/: CMakeLists.txt  main.cpp  main_gpu.cu
src/common/: common.h  kdtree.hpp  ray.hpp  simple_intersect_algs.hpp
src/gpu/: math_helpers.h  object.hpp  render.cu  render.cuh  render_helpers.h  test_gpu.cu
src/utils/: bezier_test.cpp  camera.hpp  hitPoint.hpp  imghelper.h  kdtree.hpp  mesh_obj_test.cpp  object.hpp  renderer.cpp  renderer.h  scene.hpp
utils/: bezier.hpp  bezier_test.cpp  camera.hpp  common.h  geometry.hpp  imghelper.h  object.hpp  ray.hpp  renderer.cpp  renderer.h  scene.hpp  vector3.hpp
