cmake_minimum_required(VERSION 3.08)
project(hw2)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE release)

set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wno-unused-but-set-variable -Wno-unused-parameter -Wno-sign-compare")
set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")

if(${CMAKE_BUILD_TYPE} MATCHES [rR][eE][lL][eE][aA][sS][eE])
    message("Release mode enabled, using OpenMP")
    FIND_PACKAGE(OpenMP REQUIRED)
    if(OPENMP_FOUND)
        message("OPENMP FOUND")
        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
    endif()
else()
    message("Debug mode enabled, disable OpenMP")
endif()

if(BUILD_CUDA)
    message("Build with cuda support")
endif()

if(BUILD_BEZIER_TEST)
    message("Build bezier test")
    find_package(OpenCV REQUIRED)
    include_directories(${OpenCV_INCLUDE_DIRS})
    add_executable(bezier_test utils/bezier_test.cpp)
    target_link_libraries(bezier_test ${OpenCV_LIBS})
endif()

set(EXEC_FILES main.cpp utils/renderer.cpp)
add_executable(main ${EXEC_FILES})
